Fix issue causing namv menu on mobile screens to remain hidden

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,7 @@ header {
     width: 100%;
     display: flex;
     align-items: baseline;
+    z-index: 100;
 }
 
 img {
@@ -67,7 +68,6 @@ nav {
 /* Nav toggle */
 #nav-toggle:checked~nav {
     display: block;
-    ;
 }
 
 #nav-toggle {
@@ -120,7 +120,7 @@ main {
     width: 100%;
     background: url("../images/hero.jpg") no-repeat center center/cover;
     position: relative;
-    z-index: 0;
+    z-index: 1;
 }
 
 #cover-text {
